@@ -9,7 +9,7 @@ import org.junit.jupiter.api.Test;
 
 public class CategoryCommandToCategoryTest {
 
-    public static final Long ID_VALUE = new Long(1L);
+    public static final Long ID_VALUE = Long.valueOf(1L);
     public static final String DESCRIPTION = "description";
     CategoryCommandToCategory conveter;
 
